--- a/exercises/spa/package.json
+++ b/exercises/spa/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/DaphyneMaia/spa/",
+  "homepage": "https://DaphyneMaia.github.io/spa/",
   "name": "spa",
   "version": "0.1.0",
   "private": true,
